# dep-scout

./: .gitignore  Cargo.toml  LICENSE  README.md  login-output.txt  server.json
.cursor/: mcp.json
.cursor/rules/: research-before-build.mdc
.github/workflows/: publish-mcp.yml
mcpb/: manifest.json
skill/: SKILL.md
src/: main.rs  model.rs  sources.rs
