[package]
name = "crate-scout"
version = "0.2.0"
edition = "2024"
description = "An MCP server that helps AI agents reuse mature packages (crates.io, npm, PyPI, Go, Maven, NuGet) instead of reinventing them."
license = "MIT"
readme = "README.md"
repository = "https://github.com/crate-scout/crate-scout"
keywords = ["mcp", "ai", "crates", "npm", "pypi"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
anyhow = "1.0.102"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "http2", "default-tls", "charset", "query", "gzip", "brotli", "deflate"] }
rmcp = { version = "1.7.0", features = ["server", "transport-io", "macros", "schemars"] }
schemars = "1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
time = { version = "0.3.49", features = ["parsing"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "io-std"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
